# toy-example-of-iLQR

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  foxglove_guide.md
config/: config.yaml  motion_planning.json  scenario_three_bend.yaml  scenario_three_straight.yaml  scenario_two_borrow.yaml  scenario_two_straight.yaml  scenario_two_traight.yaml
images/materials/: lexus.glb  steering_wheel.mat.txt
include/: cilqr_solver.hpp  cubic_spline.hpp  global_config.hpp  scene_update.hpp  utils.hpp
scripts/: 0-lqr-demo.py  1-lqr-pathtracking.py  2-cilqr-motionplanning.py
scripts/utils/: constraint.py  cubic_spline.py  kinematic.py
src/: cilqr_solver.cpp  cubic_spline.cpp  global_config.cpp  motion_planning.cpp  scene_update.cpp  utils.cpp
src/protos/: planning_info.proto
